--- a/home.html
+++ b/home.html
@@ -85,10 +85,10 @@
 
     <body>
         <ul>
-            <li><img src="C:\TIDAK KOSONG\WWW\BOLANG JOGJA.png" height="45px" width="auto"></li>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#tourguide">Tour Guide</a></li>
-            <li><a href="#profile">Profile</a></li>
+            <li><img src="logo bolang jogja.jpg" height="45px" width="auto"></li>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="reservation.html">Reservation</a></li>
+            <li><a href="about us.html">About us</a></li>
         </ul>
     
         <h1>
